--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
     <source src="mp4/bg.mp4" type="video/mp4">
   </video>
 
+  <img src="exploronl.png" class="center">
+
 
   <div class="social-icons">
     <ul class="list-unstyled text-center mb-0">
