--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
 
   <!-- Custom styles for this template -->
   <link href="css/coming-soon.min.css" rel="stylesheet">
+  
+  img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  }
 
 </head>
 
