--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
     <source src="mp4/bg.mp4" type="video/mp4">
   </video>
 
+  <img src="exploronl.png" class="center"> </img>
+
   <div class="masthead">
     <div class="masthead-bg"></div>
     <div class="container h-100">
