--- a/index.html
+++ b/index.html
@@ -2,10 +2,15 @@
 <html>
 <body>
 
-<h2>HTML Images</h2>
-<p>HTML images are defined with the img tag:</p>
-
-<img src="exploronl.png" alt="exploro.nl" width="104" height="142">
+<style>
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+</style>
+  
+<img src="exploronl.png" alt="exploro.nl">
 
 </body>
 </html>
