--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@ img {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  text-align:center;
-
+  vertical-align: middle;
 }
 </style>
   
