--- a/index.html
+++ b/index.html
@@ -3,11 +3,26 @@
 <body>
 
 <style>
+.frame {
+    height: 25px;      /* equals max image height */
+    width: 160px;
+    border: 1px solid red;
+    white-space: nowrap;
+    
+    text-align: center; margin: 1em 0;
+}
+
+.helper {
+    display: inline-block;
+    height: 100%;
+    vertical-align: middle;
+}
+
 img {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  vertical-align: middle;
+    background: #3A6F9A;
+    vertical-align: middle;
+    max-height: 25px;
+    max-width: 160px;
 }
 </style>
   
