--- a/index.html
+++ b/index.html
@@ -3,24 +3,10 @@
 <body>
 
 <style>
-.frame {
-    height: 25px;      /* equals max image height */
-    width: 160px;
-    border: 1px solid red;
-    white-space: nowrap;
-    
-    text-align: center; margin: 1em 0;
-}
-
-.helper {
-    display: inline-block;
-    height: 100%;
-    vertical-align: middle;
-}
-
 img {
-    vertical-align: middle;
-
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 </style>
   
