--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 
 <style>
 img {
-  display: block;
+  position: absolute;
+  top: 0; bottom:0; left: 0; right:0;
+  margin: auto;display: block;
   margin-left: auto;
   margin-right: auto;
 }
